--- a/vwslot.index.html
+++ b/vwslot.index.html
@@ -1007,7 +1007,7 @@ for (var attr in meta) {
         aria-label="Announcement"
         
       ><a
-              href="https://9su1.short.gy/slotgcr"
+              href="https://automaticforces.com/slot-gacor/16/"
               class="announcement-bar__link link link--text focus-inset animate-arrow"
             ><p class="announcement-bar__message h5">
             <span>Welcome to our store</span><svg
@@ -1831,7 +1831,7 @@ for (var attr in meta) {
 
     <script src="//505125-2.myshopify.com/cdn/shop/t/2/assets/pickup-availability.js?v=66138958121968076331704515149" defer="defer"></script></div>
 <div class="product__description rte quick-add-hidden" >
-                  <p><a href="https://9su1.short.gy/slotgcr"><img src="https://cdn.shopify.com/s/files/1/0637/5165/1492/files/d58ff6_572925fa182744dc9331884cd14721aa_mv2_480x480.gif?v=1704514892" alt="" data-mce-fragment="1" data-mce-src="https://cdn.shopify.com/s/files/1/0637/5165/1492/files/d58ff6_572925fa182744dc9331884cd14721aa_mv2_480x480.gif?v=1704514892"><br></a>Situs slot online resmi vwslot merupakan link daftar akun pro yang sediakan slot gacor deposit 10rb tanpa potongan dari agen judi online terpercaya dan menjadi rekomendasi bandar slot terbaik di Indonesia.</p>
+                  <p><a href="https://automaticforces.com/slot-gacor/16/"><img src="https://cdn.shopify.com/s/files/1/0637/5165/1492/files/d58ff6_572925fa182744dc9331884cd14721aa_mv2_480x480.gif?v=1704514892" alt="" data-mce-fragment="1" data-mce-src="https://cdn.shopify.com/s/files/1/0637/5165/1492/files/d58ff6_572925fa182744dc9331884cd14721aa_mv2_480x480.gif?v=1704514892"><br></a>Situs slot online resmi vwslot merupakan link daftar akun pro yang sediakan slot gacor deposit 10rb tanpa potongan dari agen judi online terpercaya dan menjadi rekomendasi bandar slot terbaik di Indonesia.</p>
                 </div>
               
 <script src="//505125-2.myshopify.com/cdn/shop/t/2/assets/share.js?v=13024540447964430191704515150" defer="defer"></script>
